--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jesus</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <nav class="navbar">
@@ -44,6 +44,6 @@
             </div>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
