--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/navbar.css">
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="logo">
-            <img src="/api/placeholder/120/40" alt="Jesus Logo">
-        </a>
-        <ul>
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Map</a></li>
-            <li><a href="#">Trivia</a></li>
+        <div class="navbar-left">
+          <img src="./assets/cross.png" alt="Logo" class="nav-logo">
+          <h1 class="nav-title">Our Project</h1>
+        </div>
+        <ul class="navbar-right">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="#">Map</a></li>
+          <li><a href="./triviaintro.html">Trivia</a></li>
         </ul>
-    </nav>
+      </nav>
 
     <main>
         <div class="hero-section">
