I modify some stuff in teh navbar, like when we are in the home page, the home button is active, and I finished the win page, and adjust the stuff to be in the middle

--- a/win.html
+++ b/win.html
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script src="./js/triviaintro.js"></script>
+    <script src="./js/triviaTohome.js"></script>
 </body>
 </html>
