--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <h1 class="nav-title">Our Project</h1>
         </div>
         <ul class="navbar-right">
-            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html" class="active">Home</a></li>
             <li><a href="#">Map</a></li>
             <li><a href="./triviaintro.html">Trivia</a></li>
         </ul>
