--- a/trivia.html
+++ b/trivia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/game.css" />
     <link rel="stylesheet" href="css/navbar.css" />
   </head>
+
   <body class="game-page">
     <nav class="navbar">
       <div class="navbar-left">
@@ -14,13 +15,15 @@
         <h1 class="nav-title">Our Project</h1>
       </div>
       <ul class="navbar-right">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./home.html">Home</a></li>
         <li><a href="#">Map</a></li>
-        <li><a href="./triviaintro.html">Trivia</a></li>
+        <li><a href="./triviaintro.html" class="active">Trivia</a></li>
       </ul>
     </nav>
 
+
     <div class="container">
+
       <div class="game-header">
         <h2>Trivia Challenge</h2>
         <div class="stats">
