--- a/triviaintro.html
+++ b/triviaintro.html
@@ -14,11 +14,12 @@
         <h1 class="nav-title">Our Project</h1>
       </div>
       <ul class="navbar-right">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./home.html">Home</a></li>
         <li><a href="#">Map</a></li>
-        <li><a href="./triviaintro.html">Trivia</a></li>
+        <li><a href="./triviaintro.html" class="active">Trivia</a></li>
       </ul>
     </nav>
+
 
     <section class="intro-page">
       <div class="container">
@@ -29,6 +30,7 @@
       </div>
       <button id="start-btn" class="btn">Start Quiz</button>
     </section>
+
     <script src="./js/triviaintro.js"></script>
   </body>
 </html>
