Fixed Github Live Issue where home.html was not loading (it has to be index.html)

--- a/trivia.html
+++ b/trivia.html
@@ -15,7 +15,7 @@
         <h1 class="nav-title">Our Project</h1>
       </div>
       <ul class="navbar-right">
-        <li><a href="./home.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="#">Map</a></li>
         <li><a href="./triviaintro.html" class="active">Trivia</a></li>
       </ul>
