I added teh map with everything we had in mind, you can check it and add the videos and animation

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
             <h1 class="nav-title">Our Project</h1>
         </div>
         <ul class="navbar-right">
-            <li><a href="./index.html" class="active">Home</a></li>
-            <li><a href="#">Map</a></li>
+            <li><a href="./home.html" class="active">Home</a></li>
+            <li><a href="./map.html">Map</a></li>
             <li><a href="./triviaintro.html">Trivia</a></li>
         </ul>
     </nav>
