--- a/trivia.html
+++ b/trivia.html
@@ -16,7 +16,7 @@
       </div>
       <ul class="navbar-right">
         <li><a href="./home.html">Home</a></li>
-        <li><a href="#">Map</a></li>
+        <li><a href="./map.html">Map</a></li>
         <li><a href="./triviaintro.html" class="active">Trivia</a></li>
       </ul>
     </nav>
