Converted home -> index.html

--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
             <h1 class="nav-title">Our Project</h1>
         </div>
         <ul class="navbar-right">
-            <li><a href="./home.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./map.html" class="active">Map</a></li>
             <li><a href="./triviaintro.html">Trivia</a></li>
         </ul>
