Pin Larger while hovering + New Videos

--- a/triviaintro.html
+++ b/triviaintro.html
@@ -4,27 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trivia</title>
-    <link rel="stylesheet" href="./css/trivia.css">
-    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/trivia.css" />
+    <link rel="stylesheet" href="./css/navbar.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar-left">
-        <img src="./assets/cross.png" alt="Logo" class="nav-logo">
+        <img src="./assets/cross.png" alt="Logo" class="nav-logo" />
         <h1 class="nav-title">Our Project</h1>
       </div>
       <ul class="navbar-right">
-<<<<<<< HEAD
         <li><a href="./index.html">Home</a></li>
         <li><a href="./map.html">Map</a></li>
-=======
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="#">Map</a></li>
->>>>>>> 78de579dd61f18e2cc32a45ca54b62c6deb25c2a
         <li><a href="./triviaintro.html" class="active">Trivia</a></li>
       </ul>
     </nav>
-
 
     <section class="intro-page">
       <div class="container">
