--- a/map.html
+++ b/map.html
@@ -61,7 +61,7 @@
                 <div class="category-example"><span class="category-dot" style="background-color: #4daf4a;"></span> Ministry in Galilee</div>
                 <div class="category-example"><span class="category-dot" style="background-color: #984ea3;"></span> Ministry in Judea</div>
                 <div class="category-example"><span class="category-dot" style="background-color: #ff7f00;"></span> Passion Week</div>
-                <div class="category-example"><span class="category-dot" style="background-color: #ffff33;"></span> Resurrection & Ascension</div>
+                <div class="category-example"><span class="category-dot" style="background-color: #d6d600;"></span> Resurrection & Ascension</div>
                 
                 <p>The map includes 23 key locations, covering the entire scope of Jesus' life from his birth in Bethlehem to his ascension from the Mount of Olives.</p>
                 
