I added the last 4 videos

--- a/map.html
+++ b/map.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="navbar-left">
             <img src="./assets/cross.png" alt="Logo" class="nav-logo">
-            <h1 class="nav-title">Our Project</h1>
+            <h1 class="nav-title">Life of Jesus</h1>
         </div>
         <ul class="navbar-right">
             <li><a href="./index.html">Home</a></li>
@@ -49,7 +49,7 @@
                 <h3>How to Use This Map:</h3>
                 <ul class="instruction-list">
                     <li>Each numbered marker represents a significant location in Jesus' life.</li>
-                    <li>Different colors represent different phases of his ministry.</li>
+                    <li>Different colors represent different phases of His ministry.</li>
                     <li>Hover over any marker to see the location name.</li>
                     <li>Click on any marker to learn about what happened at that location.</li>
                     <li>Use the zoom controls to explore the geography of the Holy Land.</li>
@@ -63,7 +63,7 @@
                 <div class="category-example"><span class="category-dot" style="background-color: #ff7f00;"></span> Passion Week</div>
                 <div class="category-example"><span class="category-dot" style="background-color: #d6d600;"></span> Resurrection & Ascension</div>
                 
-                <p>The map includes 23 key locations, covering the entire scope of Jesus' life from his birth in Bethlehem to his ascension from the Mount of Olives.</p>
+                <p>The map includes 23 key locations, covering the entire scope of Jesus' life from His birth in Bethlehem to His ascension from the Mount of Olives.</p>
                 
                 <p>Each location information window includes:</p>
                 <ul class="instruction-list">
